grid rows and cols exercise

--- a/first-grid/index.html
+++ b/first-grid/index.html
@@ -6,6 +6,16 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
     <link rel="stylesheet" href="basic.css">
+    <style>
+        .container{
+            display: grid;
+            /*grid-template-columns: 100px auto;  sets the width of col */
+            /*grid-template-rows: 50px 50px 200px; /* sets the height of the rows */
+            grid-template-columns: 100px auto 100px;
+            grid-template-rows: 50px 50px;
+            gap: 3px;
+        }
+    </style>
     <title>CSS Grid</title>
 </head>
 <body>
