article style css grid styling

--- a/article-layout/index.html
+++ b/article-layout/index.html
@@ -80,6 +80,10 @@
         needs to be installed. Yarn is decently decoupled and although it lacks
         documentation about the internal classes it’s quite easy to figure
         things out.</p>
+
+        <p class="aside">
+            Yarn 1.3 was recently released and includes a bunch of new features.
+        </p>
         
         <h2 id="module-loader-webpack">Module loader: Webpack</h2>
         
